--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row">
               <div class="large-6 columns">
                 <label>Start Date
-                  <input class="st datepicker" type="text" placeholder="" />
+                  <input class="sd datepicker" type="text" placeholder="" />
                 </label>
               </div>
               <div class="large-6 columns">
