--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Arboretum App</title>
     <link rel="stylesheet" href="css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.8.9/jquery.timepicker.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
@@ -119,9 +120,29 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="small-10">
+    <div class="container announcements">
+      <div class="row">
+        <div class="small-offset-1 small-10 large-offset-0 large-8">
+          <h1>General Announcements</h1>
+        </div>
+      </div>
 
+      <div class="row">
+        <div class="small-offset-1 small-10 large-offset-0 large-8">
+          <form data-abide>
+            <label for="announcementArea">This text will appear in the body of the announcement.</label>
+            <textarea id="announcementArea" placeholder="Thanks for stopping by! You're always welcome at the Arboretum." required></textarea>
+
+            <div class="media button-group">
+              <button name="facebook" type="button" id="facebook" class="secondary button">Facebook <i class="fa fa-facebook fa-lg"></i></button>
+              <button name="google" type="button" id="google" class="secondary button">Google+ <i class="fa fa-google-plus fa-lg"></i></button>
+              <button name="twitter" type="button" id="twitter" class="secondary button">Twitter <i class="fa fa-twitter fa-lg"></i></button>
+              <button name="apps" type="button" id="apps" class="secondary button active">Mobile Apps <i class="fa fa-mobile fa-lg"></i></button>
+            </div>
+
+            <button type="button" class="large button" onclick="validateForm()">Submit</button>
+          </form>
+        </div>
       </div>
     </div>
 
@@ -137,6 +158,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
     <script src="bower_components/what-input/what-input.js"></script>
     <script src="bower_components/foundation-sites/dist/foundation.js"></script>
+    <script src="bower_components/firebase/firebase.js"></script>
     <script src="https://apis.google.com/js/client.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-timepicker/1.8.9/jquery.timepicker.min.js"></script>
     <script src="js/app.js"></script>
