plant view changes as per feedback

--- a/plants.html
+++ b/plants.html
@@ -63,13 +63,10 @@
 
       <div class="row plant-container">
         <script id="plant-template" type="text/x-handlebars-template">
-          <div class="small-12 medium-6 large-4 columns plant-item">
-            {{{image}}}
-            <div class="info">
-              <h5>{{comName}}</h5>
-              <br>
-              <h6>{{sciName}}</h6>
-            </div>
+          <div class="small-12 medium-6 columns plant-item">
+            <h5>{{sciName}}</h5>
+            <br>
+            <h6><em>{{comName}}</em></h6>
           </div>
         </script>
       </div>
