google events location and other stuff

--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
             </div>
 
             <div class="row">
-              <div class="small-6 columns">
-                <label>Max Attendees
-                  <input type="text" placeholder="42" />
+              <div class="small-7 columns">
+                <label>Location
+                  <input class="location" type="text" placeholder="The Arboretum" />
                 </label>
               </div>
-              <div class="small-6 columns">
-                <label>Send notifications</label>
+              <div class="small-5 columns">
+                <label>Notifications</label>
                 <input type="radio" name="notification" id="noti1" checked><label for="noti1">Yes</label>
                 <input type="radio" name="notification" id="noti2"><label for="noti2">No</label>
               </div>
