--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
-    <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-      <button class="menu-icon" type="button" data-toggle></button>
-      <div class="title-bar-title">Menu</div>
-    </div>
-
     <nav class="container">
       <div class="row">
         <div class="small-12">
@@ -103,7 +98,7 @@
               </div>
 
               <div class="row">
-                <div class="large-12 columns">
+                <div class="small-12 columns">
                   <label>Description
                     <textarea class="description" placeholder="Walk around, look at flowers, forget your troubles!"></textarea>
                   </label>
@@ -112,12 +107,12 @@
               </div>
 
               <div class="row">
-                <div class="small-7 columns">
+                <div class="small-12 medium-12 large-7 columns">
                   <label>Location
                     <input class="location" type="text" placeholder="The Arboretum" />
                   </label>
                 </div>
-                <div class="small-5 columns">
+                <div class="small-12 medium-12 large-5 columns">
                   <label>Notifications</label>
                   <input type="radio" name="notification" id="noti1"><label for="noti1">Yes</label>
                   <input type="radio" name="notification" id="noti2" checked><label for="noti2">No</label>
@@ -180,8 +175,8 @@
 
       <div class="tabs-panel" id="plants">
         <div class="row filter">
-          <div class="small-12">
-            <fieldset class="fieldset">
+          <div class="small-12 medium-8 large-6">
+            <!-- <fieldset class="fieldset">
               <legend>Filter by:</legend>
               <h4>Type</h4>
               <input id="flowers" type="checkbox"><label for="flowers">Flowers</label>
@@ -194,7 +189,14 @@
               <input id="color4" type="checkbox"><label for="color4">Green</label>
               <input id="color5" type="checkbox"><label for="color5">Blue</label>
               <input id="color6" type="checkbox"><label for="color6">Violet</label>
-            </fieldset>
+            </fieldset> -->
+            <div class="input-group">
+              <span class="input-group-label">Search</span>
+              <input class="input-group-field" type="text" placeholder="Search by scientific name">
+              <div class="input-group-button">
+                <input type="submit" class="button" value="Submit">
+              </div>
+            </div>
           </div>
         </div>
 
