--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="tabs-title is-active"><a href="#calendar" aria-selected="true">Calendar</a></li>
                 <li class="tabs-title"><a href="#announcements">Announcements</a></li>
                 <li class="tabs-title"><a href="#plants">Plants</a></li>
-                <li class="tabs-title"><a href="#landmarks">Landmarks</a></li>
+                <!-- <li class="tabs-title"><a href="#landmarks">Landmarks</a></li> -->
               </ul>
             </div>
           </div>
@@ -126,52 +126,58 @@
       </div>
     </div>
 
-      <div class="tabs-panel" id="announcements">
-        <div class="container announcements">
-          <div class="row">
-            <div class="small-offset-1 small-10 medium-offset-1 medium-9 large-offset-0 large-6 columns">
-              <div class="row">
-                <div class="small-12 columns">
-                  <h1>General Announcements</h1>
-                  <form data-abide>
-                    <label class="announcementLabel" for="announcementArea">This text will appear in the body of the announcement.</label>
-                    <textarea id="announcementArea" placeholder="Thanks for stopping by! You're always welcome at the Arboretum." required></textarea>
+    <div class="tabs-panel" id="announcements">
+      <div class="container">
+        <div class="row  announcements">
+          <div class="small-offset-1 small-10 medium-offset-1 medium-9 large-offset-0 large-6 columns">
+            <div class="row">
+              <div class="small-12 columns">
+                <h1>General Announcements</h1>
+                <form data-abide>
+                  <label class="announcementLabel" for="announcementArea">This text will appear in the body of the announcement.</label>
+                  <textarea id="announcementArea" placeholder="Thanks for stopping by! You're always welcome at the Arboretum." required></textarea>
 
-                    <div class="media button-group">
-                      <button name="facebook" type="button" id="facebook" class="secondary button">Facebook <i class="fa fa-facebook fa-lg"></i></button>
-                      <button name="google" type="button" id="google" class="secondary button">Google+ <i class="fa fa-google-plus fa-lg"></i></button>
-                      <button name="twitter" type="button" id="twitter" class="secondary button">Twitter <i class="fa fa-twitter fa-lg"></i></button>
-                      <button name="apps" type="button" id="apps" class="secondary button active">Mobile Apps <i class="fa fa-mobile fa-lg"></i></button>
-                    </div>
-
-                    <button type="button" class="large button" onclick="validateForm()">Submit</button>
-                  </form>
-                </div>
-              </div>
-              <div class="row">
-                <div class="small-12 columns">
-                  <h2>Announcements</h2>
-                  <div class="feed">
-                    <script id="announcement-template" type="text/x-handlebars-template">
-                      <div class="announcementItem">
-                        <h5>{{message}}</h5>
-                        <p>{{timestamp}}</p>
-                      </div>
-                    </script>
+                  <div class="media button-group stacked-for-medium stacked-for-small">
+                    <button name="facebook" type="button" id="facebook" class="secondary button">Facebook <i class="fa fa-facebook fa-lg"></i></button>
+                    <button name="google" type="button" id="google" class="secondary button">Google+ <i class="fa fa-google-plus fa-lg"></i></button>
+                    <button name="twitter" type="button" id="twitter" class="secondary button">Twitter <i class="fa fa-twitter fa-lg"></i></button>
+                    <button name="apps" type="button" id="apps" class="secondary button active">Mobile Apps <i class="fa fa-mobile fa-lg"></i></button>
                   </div>
-                </div>
+
+                  <button type="button" class="large button" onclick="validateForm()">Submit</button>
+                </form>
               </div>
             </div>
-            <div class="small-10 medium-3 large-6 columns">
-              <div class="app-copy">
-                <h1>App Copy</h1>
-                <textarea class="copy" name="name" rows="8" cols="40"></textarea>
-                <button type="button" class="large button" onclick="submitCopy()">Submit</button>
-              </div>
+          </div>
+
+          <div class="feed-container small-offset-1 small-10 medium-offset-1 medium-10 large-offset-0 large-6 columns end">
+            <h2>Announcements</h2>
+            <div class="feed">
+              <script id="announcement-template" type="text/x-handlebars-template">
+                <div class="announcementItem">
+                  <h5>{{message}}</h5>
+                  <p>{{timestamp}}</p>
+                </div>
+              </script>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="small-offset-1 small-10 medium-offset-1 medium-10 large-offset-0 large-6 columns">
+            <div class="app-copy">
+              <h1>App Copy</h1>
+              <textarea class="copy" name="name" rows="8" cols="40"></textarea>
+              <button type="button" class="large button" onclick="submitCopy()">Submit</button>
             </div>
           </div>
         </div>
       </div>
+    </div>
+
+
+
+
 
       <div class="tabs-panel" id="plants">
         <div class="row filter">
@@ -218,9 +224,14 @@
           </div>
         </div>
       </div>
-      <div class="tabs-panel" id="landmarks">
+
+
+
+
+
+      <!-- <div class="tabs-panel" id="landmarks">
         <p>Suspendisse dictum feugiat nisl ut dapibus.  Vivamus hendrerit arcu sed erat molestie vehicula. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor.  Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor.</p>
-      </div>
+      </div> -->
 
     </div>
 
